--- a/assets/html/dashboard-markets.njk
+++ b/assets/html/dashboard-markets.njk
@@ -72,7 +72,7 @@
             '',
             '',
             'no-wrap',
-            'no-wrap cs--color-success',
+            'no-wrap cs--color-danger',
             ''
           ],
           'list': [
@@ -122,7 +122,7 @@
             '',
             '',
             'no-wrap',
-            'no-wrap cs--color-success',
+            'no-wrap cs--color-danger',
             ''
           ],
         'list': [
@@ -172,7 +172,7 @@
             '',
             '',
             'no-wrap',
-            'no-wrap cs--color-success',
+            'no-wrap cs--color-danger',
             ''
           ],
         'list': [
@@ -222,7 +222,7 @@
             '',
             '',
             'no-wrap',
-            'no-wrap cs--color-success',
+            'no-wrap cs--color-danger',
             ''
           ],
         'list': [
@@ -247,7 +247,7 @@
             '',
             '',
             'no-wrap',
-            'no-wrap cs--color-success',
+            'no-wrap cs--color-danger',
             ''
           ],
         'list': [
@@ -297,7 +297,7 @@
             '',
             '',
             'no-wrap',
-            'no-wrap cs--color-success',
+            'no-wrap cs--color-danger',
             ''
           ],
         'list': [
@@ -347,7 +347,7 @@
             '',
             '',
             'no-wrap',
-            'no-wrap cs--color-success',
+            'no-wrap cs--color-danger',
             ''
           ],
         'list': [
