--- a/assets/scss/pages/dashboard/news.scss
+++ b/assets/scss/pages/dashboard/news.scss
@@ -48,12 +48,12 @@
   }
   .cs--dashboard-form__input {
     &--search-wrapper {
+      align-self: center;
       @include media('<md') {
         width: 50%;
       }
       @include media('<sm') {
         width: 100%;
-        margin-top: 20px;
       }
     }
   }
