add dashboard header

--- a/assets/scss/components/main.scss
+++ b/assets/scss/components/main.scss
@@ -19,5 +19,6 @@
 @import 'bullet-list';
 @import 'landing/header';
 @import 'landing/footer';
+@import 'dashboard/header';
 @import 'dashboard/footer';
 @import 'dashboard/form';
