--- a/assets/html/partials/components/details-list.njk
+++ b/assets/html/partials/components/details-list.njk
@@ -2,8 +2,8 @@
   <ul class="cs--details-list">
     {% for item in itemList %}
       <li class="cs--details-wrapper">
-      <details class="cs--details-item">
-        <summary class="cs--details-summary">{{ item.summary }}</summary>
+      <details data-details class="cs--details-item">
+        <summary data-details-summary class="cs--details-summary">{{ item.summary }}</summary>
         <div data-details-content class="cs--details-content">
         {% for text in item.textList %}
           <p>{{ text }}</p>
