--- a/assets/scss/components/main.scss
+++ b/assets/scss/components/main.scss
@@ -17,6 +17,7 @@
 @import 'table';
 @import 'exchange';
 @import 'bullet-list';
+@import 'dropdown';
 @import 'landing/header';
 @import 'landing/footer';
 @import 'dashboard/header';
