--- a/assets/html/dashboard-markets.njk
+++ b/assets/html/dashboard-markets.njk
@@ -43,7 +43,7 @@
           'class': [
             '',
             'no-wrap',
-            '',
+            'no-wrap',
             '',
             '',
             'no-wrap',
@@ -68,7 +68,7 @@
           'class': [
             '',
             'no-wrap',
-            '',
+            'no-wrap',
             '',
             '',
             'no-wrap',
@@ -93,7 +93,7 @@
           'class': [
             '',
             'no-wrap',
-            '',
+            'no-wrap',
             '',
             '',
             'no-wrap',
@@ -118,7 +118,7 @@
         'class': [
             '',
             'no-wrap',
-            '',
+            'no-wrap',
             '',
             '',
             'no-wrap',
@@ -143,7 +143,7 @@
         'class': [
             '',
             'no-wrap',
-            '',
+            'no-wrap',
             '',
             '',
             'no-wrap',
@@ -168,7 +168,7 @@
         'class': [
             '',
             'no-wrap',
-            '',
+            'no-wrap',
             '',
             '',
             'no-wrap',
@@ -193,7 +193,7 @@
         'class': [
             '',
             'no-wrap',
-            '',
+            'no-wrap',
             '',
             '',
             'no-wrap',
@@ -218,7 +218,7 @@
         'class': [
             '',
             'no-wrap',
-            '',
+            'no-wrap',
             '',
             '',
             'no-wrap',
@@ -243,7 +243,7 @@
         'class': [
             '',
             'no-wrap',
-            '',
+            'no-wrap',
             '',
             '',
             'no-wrap',
@@ -268,7 +268,7 @@
         'class': [
             '',
             'no-wrap',
-            '',
+            'no-wrap',
             '',
             '',
             'no-wrap',
@@ -293,7 +293,7 @@
         'class': [
             '',
             'no-wrap',
-            '',
+            'no-wrap',
             '',
             '',
             'no-wrap',
@@ -318,7 +318,7 @@
         'class': [
             '',
             'no-wrap',
-            '',
+            'no-wrap',
             '',
             '',
             'no-wrap',
@@ -343,7 +343,7 @@
         'class': [
             '',
             'no-wrap',
-            '',
+            'no-wrap',
             '',
             '',
             'no-wrap',
@@ -368,7 +368,7 @@
         'class': [
             '',
             'no-wrap',
-            '',
+            'no-wrap',
             '',
             '',
             'no-wrap',
