update dropdown, dark theme controls

--- a/assets/scss/components/main.scss
+++ b/assets/scss/components/main.scss
@@ -18,6 +18,7 @@
 @import 'exchange';
 @import 'bullet-list';
 @import 'dropdown';
+@import 'color-theme';
 @import 'landing/header';
 @import 'landing/footer';
 @import 'dashboard/header';
