update responsive for header dashboard

--- a/assets/html/partials/components/dashboard/header.njk
+++ b/assets/html/partials/components/dashboard/header.njk
@@ -61,7 +61,9 @@
         </ul>
       </nav>
       <div class="cs--dashboard-options">
-        <span class="cs--dashboard-options__status">Connected</span>
+        <div class="cs--dashboard-options__status">
+          <span class="cs--dashboard-options__status-text">Connected</span>
+        </div>
         <details data-dropdown class="cs--dashboard-options__lang cs--dropdown">
           <summary class="cs--dropdown__btn">en</summary>
           <ul class="cs--dropdown__list">
