--- a/assets/scss/components/dropdown.scss
+++ b/assets/scss/components/dropdown.scss
@@ -1,5 +1,12 @@
 .cs--dropdown {
   position: relative;
+  &[open] {
+    .cs--dropdown__btn {
+      &:after {
+        transform: translateY(-50%) rotateZ(45deg) rotateY(180deg);
+      }
+    }
+  }
   &__btn {
     --side-padding: 25px;
     --arrow-size: 6px;
@@ -18,6 +25,10 @@
         border-color: var(--color-blue-50);
       }
     }
+    @include media('<xs') {
+      --side-padding: 24px;
+      padding: 6px var(--side-padding) 6px 8px;
+    }
     &::-webkit-details-marker,
     &::marker {
       display: none;
@@ -29,7 +40,7 @@
     &:after {
       content: '';
       position: absolute;
-      top: 50%;
+      top: 45%;
       right: calc(var(--side-padding) / 2);
       z-index: 1;
       width: var(--arrow-size);
@@ -39,6 +50,7 @@
       border-color: var(--color-blue-30);
       pointer-events: none;
       transform: translateY(-50%) rotateZ(135deg);
+      @include animate(transform);
     }
   }
   &__list {
@@ -51,6 +63,9 @@
     background-image: linear-gradient(205.83deg, #041c4f -0.68%, #041a48 106.1%);
     box-shadow: 0px 48px 69px rgba(23, 18, 43, 0.845335);
     backdrop-filter: blur(20px);
+    @include media('<xs') {
+      top: 125%;
+    }
   }
   &__item {
     &:not(:last-child) {
@@ -58,6 +73,7 @@
     }
     & > * {
       display: block;
+      width: 100%;
       padding: 20px 30px;
       border: none;
       background-color: transparent;
@@ -67,6 +83,7 @@
       font-size: 14px;
       font-family: var(--font-secondary);
       line-height: 1;
+      text-align: left;
       white-space: nowrap;
       @include animate(color);
       @include media('hover') {
@@ -74,6 +91,10 @@
           color: var(--color-orange-50);
           text-decoration: none;
         }
+      }
+      @include media('<xs') {
+        padding: 12px 20px;
+        font-size: 12px;
       }
       &:focus {
         color: var(--color-orange-50);
