--- a/assets/html/index.njk
+++ b/assets/html/index.njk
@@ -99,6 +99,9 @@
       }, {
         'title': 'Markets',
         'href': 'dashboard-markets.html'
+      }, {
+        'title': 'Interface',
+        'href': 'dashboard-interface.html'
       }
     ]
   %}
