update page interface

--- a/assets/html/dashboard-interface.njk
+++ b/assets/html/dashboard-interface.njk
@@ -19,8 +19,13 @@
       {% include './partials/components/dashboard/header.njk' %}
       <main class="cs--page cs--dashboard--interface">
         <div class="cs--container">
-          <div class="cs--dashboard-interface">
+          <div class="cs--interface">
             {% include './partials/sections/dashboard-interface/order-book.njk' %}
+            {% include './partials/sections/dashboard-interface/trade-history.njk' %}
+            {% include './partials/sections/dashboard-interface/my-orders.njk' %}
+            {% include './partials/sections/dashboard-interface/chat.njk' %}
+            {% include './partials/sections/dashboard-interface/balance.njk' %}
+            {% include './partials/sections/dashboard-interface/tools.njk' %}
           </div>
         </div>
       </main>
