--- a/assets/html/partials/sections/dashboard-interface/order-book.njk
+++ b/assets/html/partials/sections/dashboard-interface/order-book.njk
@@ -6,7 +6,6 @@
       'class': [
         '',
         '',
-        '',
         ''
       ],
       'list': [
@@ -17,6 +16,72 @@
     },
     'body': [
       {
+        'class': [
+          '',
+          'cs--color-danger',
+          'cs--color-secondary'
+        ],
+        'list': [
+          '0.00423',
+          '55446.23',
+          '2356.6546546'
+        ]
+      }, {
+        'class': [
+          '',
+          'cs--color-danger',
+          'cs--color-secondary'
+        ],
+        'list': [
+          '0.00423',
+          '55446.23',
+          '2356.6546546'
+        ]
+      }, {
+        'class': [
+          '',
+          'cs--color-danger',
+          'cs--color-secondary'
+        ],
+        'list': [
+          '0.00423',
+          '55446.23',
+          '2356.6546546'
+        ]
+      }, {
+        'class': [
+          '',
+          'cs--color-danger',
+          'cs--color-secondary'
+        ],
+        'list': [
+          '0.00423',
+          '55446.23',
+          '2356.6546546'
+        ]
+      }, {
+        'class': [
+          '',
+          'cs--color-danger',
+          'cs--color-secondary'
+        ],
+        'list': [
+          '0.00423',
+          '55446.23',
+          '2356.6546546'
+        ]
+      }, {
+        'class': [
+          '',
+          'cs--color-danger',
+          'cs--color-secondary'
+        ],
+        'list': [
+          '0.00423',
+          '55446.23',
+          '2356.6546546'
+        ]
+      }, {
         'class': [
           '',
           'cs--color-danger',
@@ -49,7 +114,6 @@
       'class': [
         '',
         '',
-        '',
         ''
       ],
       'list': [
@@ -81,13 +145,80 @@
           '55446.23',
           '2356.6546546'
         ]
+      }, {
+        'class': [
+          '',
+          'cs--color-success',
+          'cs--color-secondary'
+        ],
+        'list': [
+          '0.00423',
+          '55446.23',
+          '2356.6546546'
+        ]
+      }, {
+        'class': [
+          '',
+          'cs--color-success',
+          'cs--color-secondary'
+        ],
+        'list': [
+          '0.00423',
+          '55446.23',
+          '2356.6546546'
+        ]
+      }, {
+        'class': [
+          '',
+          'cs--color-success',
+          'cs--color-secondary'
+        ],
+        'list': [
+          '0.00423',
+          '55446.23',
+          '2356.6546546'
+        ]
+      }, {
+        'class': [
+          '',
+          'cs--color-success',
+          'cs--color-secondary'
+        ],
+        'list': [
+          '0.00423',
+          '55446.23',
+          '2356.6546546'
+        ]
+      }, {
+        'class': [
+          '',
+          'cs--color-success',
+          'cs--color-secondary'
+        ],
+        'list': [
+          '0.00423',
+          '55446.23',
+          '2356.6546546'
+        ]
+      }, {
+        'class': [
+          '',
+          'cs--color-success',
+          'cs--color-secondary'
+        ],
+        'list': [
+          '0.00423',
+          '55446.23',
+          '2356.6546546'
+        ]
       }
     ]
   }
 %}
 
-<section class="cs--dashboard-interface__block cs--dashboard-interface--order-book">
-  <h2 class="cs--table__title">Order Book</h2>
+<section class="cs--interface__block cs--interface__block--order-book">
+  <h2 class="cs--interface__block-title">Order Book</h2>
   {{ table(downTable) }}
+  <div class="cs--interface__break-point cs--color-success">58,763.65 ≈ 1.00051916 BTC</div>
   {{ table(upTable) }}
 </section>
