--- a/assets/scss/components/main.scss
+++ b/assets/scss/components/main.scss
@@ -19,6 +19,7 @@
 @import 'bullet-list';
 @import 'dropdown';
 @import 'color-theme';
+@import 'interface';
 @import 'landing/header';
 @import 'landing/footer';
 @import 'dashboard/header';
